--- a/Guidomia_MVP/Modules/Main/Controller/Cells/MainVCExpandableCell.xib
+++ b/Guidomia_MVP/Modules/Main/Controller/Cells/MainVCExpandableCell.xib
@@ -47,13 +47,13 @@
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Your Car" lineBreakMode="clip" minimumScaleFactor="0.29999999999999999" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C3L-6x-IRU">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="208.5" height="31.5"/>
                                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
-                                                                                <color key="textColor" red="0.45490837099999998" green="0.45489025119999998" blue="0.4549025297" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Price:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zk9-N7-KCy">
                                                                                 <rect key="frame" x="0.0" y="30" width="208.5" height="20.5"/>
                                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                                                <color key="textColor" red="0.45490837099999998" green="0.45489025119999998" blue="0.4549025297" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.45000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                         </subviews>
@@ -73,25 +73,25 @@
                                                                     <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="240" verticalHuggingPriority="240" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Xw9-3t-ZsU">
                                                                         <rect key="frame" x="0.0" y="0.0" width="135.5" height="19"/>
                                                                         <subviews>
-                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="MSk-4w-ceZ">
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="MSk-4w-ceZ">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="27.5" height="19"/>
-                                                                                <color key="tintColor" red="0.91846722359999999" green="0.41936981680000002" blue="0.199909538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="tintColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                                                             </imageView>
-                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="dpY-MZ-I3l">
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="dpY-MZ-I3l">
                                                                                 <rect key="frame" x="27.5" y="0.0" width="27" height="19"/>
-                                                                                <color key="tintColor" red="0.91846722359999999" green="0.41936981680000002" blue="0.199909538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="tintColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                                                             </imageView>
-                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="3TJ-FB-AQM">
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="3TJ-FB-AQM">
                                                                                 <rect key="frame" x="54.5" y="0.0" width="27" height="19"/>
-                                                                                <color key="tintColor" red="0.91846722359999999" green="0.41936981680000002" blue="0.199909538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="tintColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                                                             </imageView>
-                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="WoO-6J-qLr">
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="WoO-6J-qLr">
                                                                                 <rect key="frame" x="81.5" y="0.0" width="27" height="19"/>
-                                                                                <color key="tintColor" red="0.91846722359999999" green="0.41936981680000002" blue="0.199909538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="tintColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                                                             </imageView>
-                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="wSl-h4-vUi">
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="wSl-h4-vUi">
                                                                                 <rect key="frame" x="108.5" y="0.0" width="27" height="19"/>
-                                                                                <color key="tintColor" red="0.91846722359999999" green="0.41936981680000002" blue="0.199909538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <color key="tintColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                                                             </imageView>
                                                                         </subviews>
                                                                     </stackView>
@@ -111,7 +111,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.83530551200000003" green="0.83527380230000003" blue="0.83529525999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.83529411764705885" green="0.83529411764705885" blue="0.83529411764705885" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="116" id="A70-MR-KNp"/>
                                     <constraint firstItem="otI-4G-mwQ" firstAttribute="top" secondItem="9NC-Ro-f9s" secondAttribute="top" constant="20" symbolic="YES" id="EJ7-o1-WxP"/>
@@ -125,7 +125,7 @@
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oKZ-cx-JMG" userLabel="Orange Separator View">
                                         <rect key="frame" x="20" y="12" width="356" height="3"/>
-                                        <color key="backgroundColor" red="0.91846722359999999" green="0.41936981680000002" blue="0.199909538" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" red="0.9882352941176471" green="0.37647058823529411" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="3" id="28T-A2-mSO"/>
                                         </constraints>
@@ -164,7 +164,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="star" width="666.66668701171875" height="666.66668701171875"/>
+        <image name="star" width="50" height="47.333332061767578"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
