--- a/Guidomia_MVP/Modules/Main/Controller/Header/MainVCHeaderView.xib
+++ b/Guidomia_MVP/Modules/Main/Controller/Header/MainVCHeaderView.xib
@@ -15,7 +15,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I5E-pp-R6W" userLabel="Content View">
                     <rect key="frame" x="0.0" y="0.0" width="397" height="262"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mFE-TZ-Rgv">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mFE-TZ-Rgv">
                             <rect key="frame" x="0.0" y="0.0" width="397" height="262"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vdg-n8-J8H">
