--- a/Guidomia_MVP/Modules/Main/Controller/Cells/Filter Cell/FilterTableViewCell.xib
+++ b/Guidomia_MVP/Modules/Main/Controller/Cells/Filter Cell/FilterTableViewCell.xib
@@ -63,7 +63,7 @@
                                                                                     </button>
                                                                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Of-SE-Xzz">
                                                                                         <rect key="frame" x="0.0" y="40" width="363" height="100"/>
-                                                                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="height" constant="100" id="yH3-B2-fBc"/>
                                                                                         </constraints>
@@ -116,7 +116,7 @@
                                                                                     </button>
                                                                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9C-Jt-m2J">
                                                                                         <rect key="frame" x="0.0" y="40" width="363" height="100"/>
-                                                                                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="height" constant="100" id="XWU-g5-CG7"/>
                                                                                         </constraints>
@@ -180,6 +180,11 @@
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.52156862749999999" green="0.52156862749999999" blue="0.52156862749999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -212,12 +217,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
