--- a/Guidomia_MVP/Modules/Main/Controller/Cells/Filter Cell/FilterTableViewCell.xib
+++ b/Guidomia_MVP/Modules/Main/Controller/Cells/Filter Cell/FilterTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -114,7 +115,7 @@
                                                                                             <action selector="didTapModelButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ICB-qK-Uzh"/>
                                                                                         </connections>
                                                                                     </button>
-                                                                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9C-Jt-m2J">
+                                                                                    <pickerView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9C-Jt-m2J">
                                                                                         <rect key="frame" x="0.0" y="40" width="363" height="100"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <constraints>
